# Cork

./: .envrc  .gitignore  .lintstagedrc.js  .lintstagedrc.json  .oxfmtrc.json  .oxlintrc.json  .wtp.yml  AGENTS.md  CHANGELOG.md  README.md  biome.json  bunfig.toml  index.html  mise.toml  package.json  react-doctor.config.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release-please.yml
.husky/: pre-commit
openspec/changes/2026-06-05-task-search/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-auto-refresh-on-file-change/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-kanban-view/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-settings-screen/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-configurable-statuses/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-drag-and-drop/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-per-workspace-statuses/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-persist-task-order/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-settings-instant-apply/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-settings-status-drag-reorder/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-status-drag-reorder/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-unify-settings-save-behavior/: design.md  proposal.md  tasks.md
openspec/changes/in-app-updater/: tasks.md
openspec/changes/mcp-list-tasks-query-filters/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-dnd-kit/: design.md  proposal.md  tasks.md
openspec/changes/task-due-date/: proposal.md  tasks.md
openspec/changes/undefined-status-lane/: design.md  proposal.md
openspec/specs/backend-update-task/: spec.md
openspec/specs/markdown-editor-testing/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/multi-window/: spec.md
openspec/specs/per-workspace-statuses/: spec.md
openspec/specs/recent-workspaces-picker/: spec.md
openspec/specs/search-tasks/: spec.md
openspec/specs/tag-filters/: spec.md
openspec/specs/task-body-editor/: spec.md
openspec/specs/task-dates/: spec.md
openspec/specs/task-delete/: spec.md
openspec/specs/task-detail-dialog/: spec.md
openspec/specs/task-tags/: spec.md
openspec/specs/updater/: spec.md
scripts/: build-cask.ts  build-sidecar.ts  build-update-manifest.ts
src/: AGENTS.md  App.tsx  Board.tsx  Card.tsx  Column.tsx  DirectoryPicker.tsx  SettingsPanel.tsx  main.tsx  style.css  types.ts
src-tauri/: .gitignore  AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml  build.rs
src-tauri/cli/src/: main.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  frontmatter.rs  lib.rs  main.rs  mcp.rs  menu.rs  security.rs  state.rs  status.rs  task.rs  workspace.rs
src/api/: AGENTS.md  index.ts  mcp.ts  menu.ts  opener.ts  statuses.ts  tasks.ts  updater.ts  workspace.ts
src/components/: AGENTS.md
src/components/atoms/: AGENTS.md  AutoresizeInput.tsx  Badge.tsx  Button.tsx  Heading.tsx  Input.tsx  TagChip.tsx  Text.tsx  Textarea.tsx  Toggle.tsx  index.ts
src/components/board/: Board.tsx  Card.tsx  Column.tsx
src/components/directory/: DirectoryPicker.tsx
src/components/molecules/: AGENTS.md  Calendar.tsx  CodeBlock.tsx  ContextMenu.tsx  DateBadge.tsx  DateField.tsx  DialogFooter.tsx  DialogHeader.tsx  DragHandle.tsx  DropdownMenu.tsx  ErrorBanner.tsx  FilterButton.tsx  FilterRow.tsx  FormField.tsx  IconButton.tsx  MarkdownEditor.tsx  MenuList.tsx  PathDisplay.tsx  RecentWorkspacesList.tsx  SearchBar.tsx  Select.tsx  StatusIndicator.tsx  TagEditor.tsx  TagList.tsx  TagOperandInput.tsx  TagSuggestionPopover.tsx  WelcomeHero.tsx  index.ts
src/components/organisms/: AGENTS.md
src/components/pages/: AGENTS.md  BoardPage.tsx  WelcomePage.tsx  index.ts
src/components/settings/: SettingsPanel.tsx  StatusList.tsx  StatusRow.tsx
src/components/templates/: AGENTS.md  BoardLayout.tsx  WelcomeLayout.tsx  index.ts
src/components/ui/: Button.tsx
src/hooks/: AGENTS.md  useBoardDragState.ts  useCurrentDir.ts  useFilterStore.ts  useMcpSettings.ts  useStatusEdit.ts  useUpdater.ts  useWorkspace.ts  useWorkspaceStatuses.ts  useWorkspaceTasks.ts  useWorkspaceWatcher.ts
src/hooks/ui/: useAnchorRect.ts  useClickOutside.ts  useDebouncedCallback.ts  useDialogError.ts  useEscapeKey.ts  useFieldError.ts  useFocusTrap.ts  useModalStack.ts  useReanchorOnScroll.ts  useTagEditorController.ts
src/lib/: AGENTS.md  board.ts  date.ts  filter.ts  keyboard.ts  statuses.ts  tags.ts  task.ts
src/types/: AGENTS.md  filter.ts  index.ts  mcp.ts  settings.ts  status.ts  task.ts  updater.ts
(+156 files in other folders)
