[workspace]
members = ["cli"]
resolver = "2"

[package]
name = "cork"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-fs = { version = "=2.5.1", features = ["watch"] }
tauri-plugin-store = "=2.4.3"
tauri-plugin-single-instance = "=2.4.2"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-process = "=2.3.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["preserve_order"] }
rfd = "=0.17.2"
gray_matter = "=0.3.2"
yaml-rust2 = "=0.10.4"
rayon = "=1.12.0"
nucleo-matcher = "=0.3.1"
objc2-app-kit = { version = "=0.3.2", features = ["NSColor", "NSWindow", "objc2-core-foundation"] }
rmcp = { version = "=1.7.0", features = [
  "server",
  "transport-streamable-http-server",
  "macros",
  "schemars",
] }
rand = "=0.9.4"
tokio = { version = "=1.52.3", features = ["sync", "time", "rt", "fs"] }
tokio-util = "=0.7.18"
axum = "=0.8.9"
http = "=1.4.1"
subtle = "=2.6.1"
schemars = "=1.2.1"

[dev-dependencies]
tempfile = "=3.27.0"
tower = { version = "=0.5.3", features = ["util"] }

